syntax= "proto3";

package authService ;

option go_package="pkg/auth-service/pb";

service AuthService{

    rpc Register(RegisterRequest)returns (RegisterResponse){}
    rpc Login(LoginRequest)returns (LoginResponse){}
    rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

message RegisterRequest{

   string firstName =1;
   string lastName =2;
   string email=3;
   string password =4;
   int64 phoneNumber =5;
}
message RegisterResponse{

    int64 status=1;
    string error=2;
}
message LoginRequest{
string email =1;
string password=2;

}
message LoginResponse{

    int64 status =1;
    string error =2;
}
message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}